--- a/app/main.html
+++ b/app/main.html
@@ -3,17 +3,95 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="" />
     <meta name="keywords" content="" />
     <meta name="author" content="" />
     <title>TEST - D3</title>
     <style type="text/css">
+      /*
+      .embed-responsive-video {
+        width: 100%;
+        margin: 0 auto;
+        background-color: #f00;
+      }
+      .embed-responsive-video .wrap-video {
+        position: relative;
+        padding-top: 56.25%
+      }
+      .embed-responsive-video .wrap-video iframe {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+      }
+      */
+
+      #wrapper {
+      }
+
+      .svg-d3-scale {
+      }
+
+      .svg-d3-scale .axis-x {
+      }
+
+      .svg-d3-scale circle {
+        -webkit-transition: all 0.3s;
+        -moz-transition: all 0.3s;
+        -o-transition: all 0.3s;
+        transition: all 0.3s;
+      }
+
+      .axis-x path {
+        fill: none;
+        stroke: red;
+        shape-rendering: crispEdges;
+      }
+
+      .axis-x line {
+        fill: none;
+        shape-rendering: crispEdges;
+      }
+
+      .axis-x text {
+        font-family: sans-serif;
+        font-size: 11px;
+        fill: #f00;
+      }
+
+      .svg-container {
+        position: relative;
+        width: 100%;
+      }
+
+      .svg-contents {
+        display: block;
+        position: absolute;
+        top: 0;
+        left: 0;
+      }
     </style>
   </head>
 
   <body>
     <div id="wrapper">
-      <svg width="500" height="100"></svg>
+      <div>
+        <svg class="svg-d3" width="500" height="200"></svg>
+      </div>
+
+      <div>
+        <svg class="svg-d3-scale" width="600" height="200"></svg>
+      </div>
+
+
+
+      <div class="svg-container">
+        <svg class="svg-contents" viewBox="0 0 500 200" preserveAspectRatio="xMinYMin meet">
+          <circle fill="#f00" cx="20" cy="20" r="20"></circle>
+        </svg>
+      </div>
     </div>
 
     <script type="text/javascript" src="lib/jquery-1.12.2.min.js" charset="utf-8"></script>
