+ main.html, main.js draw lines
+ lines.html, lines.js
added

--- a/app/main.html
+++ b/app/main.html
@@ -61,6 +61,17 @@
         fill: #f00;
       }
 
+      .svg-d3-scale line {
+        fill: none;
+        stroke: rgba(255, 128, 255, 0.5);
+        stroke-width: 1;
+        shape-rendering: auto;
+      }
+
+
+
+
+
       .svg-container {
         position: relative;
         width: 100%;
