+ main.html, main.js change to responsive.html, js
+ responsive.html, responsive.js
added.

--- a/app/line.html
+++ b/app/line.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="author" content="Kim.Chief Studio" />
+    <meta name="author" content="khs" />
     <title>TEST - D3</title>
     <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
     <style type="text/css">
